--- a/views/updateserie.ejs
+++ b/views/updateserie.ejs
@@ -9,6 +9,8 @@
     <input type="text" name="Description" value="<%= Description %>"><br>
     Catégorie: 
     <input type="number" min="0" max="10" name="FK_CatégorieID"  value = "<%= FK_CatégorieID %>" id="nb_revue"><br>
+    Statut : 
+    <input type="text" enum="Serie Fini, En cours" name="Statut"  value = "<%= Statut %>" id="nb_revue">
     <table>
         <tr>
             <th>1</th>
