--- a/views/categorie1.ejs
+++ b/views/categorie1.ejs
@@ -29,22 +29,22 @@
                     <form action = "/mainpage" method="GET">
                       <button type="submit" class="btn btn-sm btn-primary btn-create">Série</button>
                       </form>
+                      <form action = "/categorie1" method="GET">
+                        <button type="submit" class="btn btn-sm btn-primary btn-create">Catégorie</button></form>
                   </div>
+ 
                   <div class="cat">
-                  <form action = "/categorie1" method="GET">
-                    <button type="submit" class="btn btn-sm btn-primary btn-create">Action</button></form>
-                    <form action = "/categorie2" method="GET">
-                      <button type="submit" class="btn btn-sm btn-primary btn-create">Aventure</button></form>
-                      <form action = "/categorie3" method="GET">
-                        <button type="submit" class="btn btn-sm btn-primary btn-create">Comédie</button></form>
-                        <form action = "/categorie4" method="GET">
-                          <button type="submit" class="btn btn-sm btn-primary btn-create">Horreur</button></form>
-                          <form action = "/categorie5" method="GET">
-                            <button type="submit" class="btn btn-sm btn-primary btn-create">Drama</button></form>
+                    <% for (let i = 0 ;  i < catégorie.length ; i++) { %> 
+                  <form action = "/categoriebtn/<%= catégorie[i].category %>" method="GET">
+                    <button type="submit" class="btn btn-sm btn-primary btn-create"><%= catégorie[i].category %></button></form>
+                    <% } %>
                   </div>
+                
+                
                   <div class="create">
                     <form action = "/addcategorie" method="GET">
                     <button type="submit" class="btn btn-sm btn-primary btn-create">Create New Catégorie</button>
+                    <p>Pour que la catégorie s'affiche, il faut lui mettre une série dedans, une catégorie vide de s'affiche pas</p>
                     </form>
                   </div>
                 </div>
@@ -54,13 +54,13 @@
                 <div class="span5">
                         <table class="table table-striped table-condensed">
                               <thead>
-                                
+                                      
                               <tr>
                                   <th>Catégorie</th>
                                   <th>Titre</th>
                                   <th>Status</th>                                          
                               </tr>
-                              <% for (let i = 0 ;  i < catégorie.length ; i++) { %>
+                              <% for (let i = 0 ;  i < catégorie.length ; i++) { %> 
                               <tr>
                                 <td><%= catégorie[i].category %></td>
                                 <td><%= catégorie[i].nom %> </td>
@@ -86,6 +86,12 @@ ol, li{
     margin: 2px 2px 2px 2px;
     margin-right: 3px;
 
+}
+.recherche, .recherche button {
+    list-style-type: none;
+    display: flex;
+    margin: 2px 2px 2px 2px;
+    margin-left: 20px;
 }
 button{
   margin-left: 70px;
