--- a/views/serieAdd.ejs
+++ b/views/serieAdd.ejs
@@ -7,8 +7,9 @@
     Description : 
     <input type="text" name="Description" value="<%= Description %>"><br>
     Catégorie: 
-    <input type="number" min="0" max="5" name="FK_CatégorieID"  value = "<%= FK_CatégorieID %>" id="nb_revue"><br>
-     
+    <input type="number" min="0" max="10" name="FK_CatégorieID"  value = "<%= FK_CatégorieID %>" id="nb_revue"><br>
+    
+  </table>
     <table>
         <tr>
             <th>1</th>
