--- a/views/serieAdd.ejs
+++ b/views/serieAdd.ejs
@@ -1,5 +1,6 @@
 <h1>Ajouter une Série</h1>
 <form action="/newserie" method="POST">
+    <input type="hidden" name="SerieID" value="<%= SerieID %>" ><br>
     Titre : 
     <input type="text" name="Title" value="<%= Title %>" ><br>
     Note (sur 10):
