--- a/views/mainpage.ejs
+++ b/views/mainpage.ejs
@@ -31,7 +31,7 @@
                   <form action = "/mainpage" method="GET">
                     <button type="submit" class="btn btn-sm btn-primary btn-create">Série</button>
                     </form>
-                    <form action = "/categorie1" method="GET">
+                    <form action = "/categoriename" method="GET">
                       <button type="submit" class="btn btn-sm btn-primary btn-create">Catégorie</button></form>
                 </div>
                 <div class="create">
