--- a/views/confirm.ejs
+++ b/views/confirm.ejs
@@ -1,6 +1,61 @@
 <h2><em>Etes-vous sur de vouloir supprimer votre compte ?</em></h2>
 <p>Toutes les données associées à votre compte seront supprimées </p>
-<form action ="/userRemove" method="POST"><button type ="submit">Oui</button>
+<form  action ="/userRemove" method="POST"><button class="Save" type ="submit">Oui</button>
 </form> 
-<form action ="/mainpage" method="GET"><button type ="submit">Non</button>
+<form action ="/mainpage" method="GET"><button class="Save" type ="submit">Non</button>
 </form> 
+
+<style>
+ 
+    body{
+        background-color:honeydew;
+        width: 150%;
+        margin-left: 50px;
+    }
+ 
+    form{
+        background-color: #E0E0E0;
+        width:20%;
+        text-align:justificy;
+        border-width: 2px;
+        border-style: groove;
+        border-image: initial;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        padding-left: 6px;
+        text-align: center;
+    }
+ 
+    input{
+        border-radius: 2px 2px 2px;
+    }
+ 
+    h2{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: black;
+        width:30%;
+        text-align:center;
+        border-radius: 50px;
+        color: white;
+    }
+ 
+    .save{
+        border-radius: 12px;
+        background-color: black;
+        border: white;
+        color: white;
+        font-family: Georgia;
+        font-size: 18px;
+        text-align: center;
+        width: 100px;
+    }
+ 
+    .Back{
+        border-radius: 12px;
+        background-color: green;
+        border: white;
+        color: white;
+        font-family: Georgia;
+        font-size: 18px;
+    }
+ 
+</style>
