--- a/views/removeserie.ejs
+++ b/views/removeserie.ejs
@@ -2,13 +2,13 @@
 <form action="/deleteserie/<%= SerieID %>" method="POST">
     <input type ="hidden" name ="SerieID" value = "<%= SerieID %>" >
     Titre : 
-    <input type="text" name="Title" value="<%= Title %>" ><br>
+    <input type="text" name="Title" value="<%= Title %>" ><br> </br>
     Note (sur 10):
-    <input type="number" min="0" max="10" name="Note"  value = "<%= Note %>" id="nb_revue"><br>
+    <input type="number" min="0" max="10" name="Note"  value = "<%= Note %>" id="nb_revue"><br></br>
     Description : 
-    <input type="text" name="Description" value="<%= Description %>"><br>
+    <input type="text" name="Description" value="<%= Description %>"><br></br>
     Catégorie: 
-    <input type="number" min="0" max="10" name="FK_CatégorieID"  value = "<%= FK_CatégorieID %>" id="nb_revue"><br>
+    <input type="number" min="0" max="10" name="FK_CatégorieID"  value = "<%= FK_CatégorieID %>" id="nb_revue"><br></br>
     
     <table>
         <tr>
@@ -24,8 +24,60 @@
             <td>Drama</td>
         </tr>
     </table>
-    <input type="submit" name="Delete" value="Delete"><br>
+    <input class="save" type="submit" name="Delete" value="Delete"><br>
 </form>
 <form action="/mainpage" method="get">
-    <button type="submit"> Retour à la liste </button>
+    <button class="Back" type="submit"> Retour à la liste </button>
  </form>
+
+ <style>
+ 
+    body{
+        background-color:honeydew;
+        width: 150%;
+        margin-left: 50px;
+    }
+ 
+    form{
+        background-color: #E0E0E0;
+        width:25%;
+        text-align:justificy;
+        border-width: 2px;
+        border-style: groove;
+        border-image: initial;
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        padding-left: 6px;
+    }
+ 
+    input{
+        border-radius: 2px 2px 2px;
+    }
+ 
+    h1{
+        font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        background-color: black;
+        width:25%;
+        text-align:center;
+        border-radius: 50px;
+        color: white;
+    }
+ 
+    .save{
+        border-radius: 12px;
+        background-color: black;
+        border: white;
+        color: white;
+        font-family: Georgia;
+        font-size: 18px;
+    }
+ 
+    .Back{
+        border-radius: 12px;
+        background-color: green;
+        border: white;
+        color: white;
+        font-family: Georgia;
+        font-size: 18px;
+    }
+ 
+</style>
