--- a/views/updatecat.ejs
+++ b/views/updatecat.ejs
@@ -2,7 +2,7 @@
 <form action="/updatecat" method="POST">
     <input type ="hidden" name ="CatégorieID" value = "<%= CatégorieID %>" >
     Catégorie Name :
-    <input type="text" name="CatName"  value = "CatName"><br>
+    <input type="text" name="CatName"  value = "<%= CatName %>"><br>
     <table>
         <tr>
             <th>1</th>
