--- a/views/categorie1.ejs
+++ b/views/categorie1.ejs
@@ -38,6 +38,7 @@
                     <button type="submit" class="btn btn-sm btn-primary btn-create">Create New Catégorie</button>
                     <p>Pour que la catégorie s'affiche, il faut lui mettre une série dedans, une catégorie vide de s'affiche pas</p>
                     </form>
+
                   </div>
                 </div>
               </div>
@@ -57,7 +58,10 @@
                               <tr>
                                 <td><%= catégorie[i].category %></td>
                                 <td><%= catégorie[i].nom %> </td>
-                                <td><span class="label label-success"> <%= catégorie[i].statut %></span>
+                                <td><span class="label label-success"> <%= catégorie[i].statut %></span></td>
+                                <td><form action = "/updatecatform/<%= catégorie[i].CatégorieID %>" method="GET">
+                                  <button type="submit" ><em class="fa fa-pencil"></em></button>
+                                  </form></td>
                                 </tr>
                                 <% } %>
                         </table>
