--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- empeche dézoom -->
+<meta http-equiv="X-UA-Compatible" content="ie=edge">
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -36,3 +37,8 @@
 </body>
 
 </html>
+<style>
+    @media (max-width:900px) {
+
+}
+</style>
