--- a/views/categoriechoice.ejs
+++ b/views/categoriechoice.ejs
@@ -1,144 +1,276 @@
-<link href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet" id="bootstrap-css">
-<script src="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/js/bootstrap.min.js"></script>
-<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.4.0/css/font-awesome.min.css" rel='stylesheet' type='text/css'>
-<meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- empeche dézoom -->
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<head id = "head"> <ol>
-  <li>
-    <form action ="/confirm" method="GET"><button type ="submit">Delete Account</button>
-    </form> 
-   </li>
-<li>
-  <form action ="/userHome" method="GET"><button type ="submit">LogOut</button>
-</form>
-</li>
-</ol></head>
-<div class="container">
-    <div class="row">
-    
-    <p></p>
-    <h1>Choisir une catégorie</h1>
-        <div class="col-md-10 col-md-offset-1">
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=GA_TRACKING_ID"></script>
+<script>
+	window.dataLayer = window.dataLayer || [];
+	function gtag(){dataLayer.push(arguments);}
+	gtag('js', new Date());
 
-            <div class="panel panel-default panel-table">
-              <div class="panel-heading">
-                <div class="row">
-                  <div class="recherche">
-                    <form action = "/mainpage" method="GET">
-                      <button type="submit" class="btn btn-sm btn-primary btn-create">Série</button>
-                      </form>
-        
-                        <% for (let i = 0 ;  i < catégorie.length ; i++) { %> 
-                      <form action = "/categoriebtn/<%= catégorie[i].category %>" method="GET">
-                        <button type="submit" class="btn btn-sm btn-primary btn-create"><%= catégorie[i].category %></button></form>
+	gtag('config', 'GA_TRACKING_ID');
+</script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="description de DEM GROUP">
+    <meta name="robots" content="noindex, nofollow">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css" />
+    <title>SERIVORE</title>
+    <head id = "head"> 
+      <ol>
+      <li>
+        <form action ="/confirm" method="GET"><button type ="submit">Delete Account</button>
+        </form> 
+       </li>
+    <li>
+      <form action ="/userHome" method="GET"><button type ="submit">LogOut</button>
+    </form>
+    </li>
+  </ol>
+      
+  <form id="modif" action = "/userFormUpdate" method="GET">
+    <button type="submit" ><em>Modifier profil</em></button>
+    </form>
+    </head>
+</head>
+ <body>
+            <nav>
+                    <ul>
+                        <li><a href="/mainpage">Serie</a></li>
+                          <li><a href="/categoriename">Catégorie</a></li>
+                    </ul>
+                </nav>
+                <section id = "bloc1" role="about catégorie name" >
+                   <h1>Liste des catégories</h1>
+                    <div class="create">
+                    <a href= "/addcategorie"><img src="https://www.cjoint.com/doc/20_05/JEmsu2lX8XV_plus.png" alt="ajouter serie">Create New Catégorie</a>
+                    </div>
+
+                    <nav>
+                      <% for (let i = 0 ;  i < catégorie.length ; i++) { %> 
+                      <ul>
+                     <li><a href= "/categoriebtn/<%= catégorie[i].category %>"><%= catégorie[i].category %></a></li>
                         <% } %>
-              
-    
-                  </div>
-                
-                  <div class="create">
-                    <form action = "/addcategorie" method="GET">
-                    <button type="submit" class="btn btn-sm btn-primary btn-create">Create New Catégorie</button>
-                    <p>Veuillez selectionner une catégorie pour afficher la liste des séries qui sont dans votre base de données</p>
-                    </form>
-                  </div>
-                </div>
-                <img src="https://www.cjoint.com/doc/20_05/JEhuuvTO0PV_Image1.png" type="image" alt="Selectionner une catégorie">
-            </div>
-            </div>
+                      </ul>
+                    </nav>
+                    <p align="center">Veuillez selectionner une catégorie pour afficher la liste des séries qui sont dans votre base de données</p>
+                    <div class="img_centrale">
+                    <img src="https://www.cjoint.com/doc/20_05/JEhuuvTO0PV_Image1.png" alt="catégorie serie">
+                    </div>
+                </section>
 
-</div></div></div>
+ <button><div id="scroll_to_top"> 
+    <a href="#modif"><img src="https://www.cjoint.com/doc/20_05/JEmseQchvoV_arrow.png" alt="Retourner en haut" /></a> 
+    <span class ="accessible-hidden"> <em lang ="en"> Menu </em> </span>
+</div>
+</button>
+    </body>
+    <footer>
+      <h2> Suivez moi sur : </h2>
+       <div class="socialMedia" >
+       <button>
+       <a href ="https://www.facebook.com/gintoki.mbalambala" target="_blank"> 
+         <img class = "buttonAdil" src= "https://www.cjoint.com/doc/20_05/JEmtyfFCMuV_fcb.png" alt ="facebook de adil" aria-hidden = "True">
+         <span class ="accessible-hidden"> <em lang ="en"> Facebook </em> </span></a>
+       </button>
+       <button>
+       <a href ="https://www.instagram.com/adil_bmd/?hl=fr" target="_blank"> 
+         <img class = "InstaAdil" src= "https://www.cjoint.com/doc/20_05/JEmtyNIjKPV_insta.png" alt ="Instagram de Adil" aria-hidden = "True"> </a>
+         <span class ="accessible-hidden"> <em lang ="en"> LinkdeIn </em> </span>
+       </button> </div>
+    </footer>
+</html>
 <style>
-  .cat, .cat button{
-    list-style-type: none;
-    display: flex;
-   margin-left: 70px;
+  :root {
+
+--base-color-h: 352;
+  --base-color-s: 94%;
+  --base-color-l: 37%;
+  --base-color: hsl(var(--base-color-h),
+                    var(--base-color-s),
+                    var(--base-color-l));
+  --base-color-darken-5: hsl(var(--base-color-h),
+                              var(--base-color-s),
+                              calc(var(--base-color-l) - 5%));
+  --length-M: 1rem;
+  --length-L: calc(var(--length-M) * 2);
+  --length-S: calc(var(--length-M) / 2);
+  --mdc-theme-primary : #D2693D;
+  --mdc-theme-on-primary :#fff;
+}
+.row{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto;
+    grid-column-gap: 1em;
+}
+@media (max-width: 500px){
+    .row{
+        grid-template-columns: 0.5fr 0.5fr 0.5fr;
+    }
 }
 ol, li{
   list-style-type: none;
     display: flex;
     margin: 2px 2px 2px 2px;
     margin-right: 3px;
+}
+#modif{
+  text-align: right;
+  margin-bottom:10px;
+}
+.pencil img{
+  width: 20px;;
+}
+.trash img{
+width: 20px;
+}
 
-}
-.recherche, .recherche button {
-    list-style-type: none;
-    display: flex;
-    margin: 2px 2px 2px 2px;
-    margin-left: 20px;
-}
-button{
-  margin-left: 70px;
-}
-
-.panel-table .panel-body .table-bordered > thead > tr > th:first-of-type {
-    text-align:center;
-    width: 110px;
+#bloc1{
+    border-radius: 8px; 
+    position: relative;
+    box-shadow: 0px 7px 7px 0px #1c1a19;
+    margin-bottom: var(--length-L);
+    text-align: justify;
+    padding: 10px;
 }
 .create, .create button{
-  float: right;
-  margin-top: 0px;
+  text-align: right;
   margin-right: 0px;
   margin-bottom: 0px;
 }
-
-.panel-table .panel-body .table-bordered > thead > tr > th:last-of-type,
-.panel-table .panel-body .table-bordered > tbody > tr > td:last-of-type {
-  border-right: 0px;
-  width: 100px;
+.create img{
+  width: 15px;
+}
+header
+{
+    display: flex;
+    justify-content: space-between;
+}
+header h1
+{
+    font-family: cursive, Serif, sans-serif;
+    font-size: 2.5em;
+    font-weight: normal;
+    text-align:center;
+    align-content: center;
 }
 
-.panel-table .panel-body .table-bordered > thead > tr > th:first-of-type,
-.panel-table .panel-body .table-bordered > tbody > tr > td:first-of-type {
-  border-left: 0px;
-  width: 100px;
+.titre_principal
+{
+    text-align:center;
+    align-content: center;
 }
 
-.panel-table .panel-body .table-bordered > tbody > tr:first-of-type > td{
-  border-bottom: 0px;
-}
 
-.panel-table .panel-body .table-bordered > thead > tr:first-of-type > th{
-  border-top: 0px;
-}
-
-.panel-table .panel-footer .pagination{
-  margin:0; 
-}
-
-/*
-used to vertically center elements, may need modification if you're not using default sizes.
-*/
-.panel-table .panel-footer .col{
- line-height: 34px;
- height: 34px;
-}
-
-.panel-table .panel-heading .col h3{
- line-height: 30px;
- height: 30px;
-}
-
-.panel-table .panel-body .table-bordered > tbody > tr > td{
-  line-height: 34px;
-  font-size: 0.8em;
-  font-family: Arial, Helvetica, sans-serif;
-}
-h1 {
+#bloc1 h1{
     text-align: center;
-    border: solid 1px;
-    background-color: grey;
-    color : white;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    font-size: 3em;
 }
-@media (max-width:800px) {
 
+#logo h1{
+    text-align: center;
+} 
+
+body
+{
+    background: url(https://www.cjoint.com/doc/20_05/JEmrNlJJgCV_back.jpg);
+    font-family: 'Trebuchet MS', Arial, sans-serif;
+}
+
+nav ul
+{
+   display: inline-flex;
+    align-self: flex-end;
+    justify-content: justify;
+    align-content: center;
+    text-align: center;
+    border : 1px;
+
+} 
+
+nav li
+{
+  background-color: var(--mdc-theme-primary);
+  padding: 5px 5px;
+  margin-left: var(--length-S);
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 15px;
+  border: 1px solid var(--mdc-theme-primary);
+  border-radius: 3px;
+  margin-top: var(--length-S);
+  margin-bottom: var(--length-S);
+  color : var(--mdc-theme-on-primary);
+}
+nav ul a {
+
+    font-size: 0.8em;
+    text-decoration: none;
+    color : var(--mdc-theme-on-primary);
+}
+
+nav ul a:hover
+{
+    color: blue;
+    border-bottom: 3px solid #760001;
+    transition-duration: 1s;
+}
+nav {
+    text-align: center;
+}
+button {
+    position: relative;
+}
+
+button:hover span.accessible-hidden {
+    left: 50%;
+    margin-left: -50%;
+    top: -2.5em;
+    display: block;
+    color: white;
+    background-color: rgba(0,0,0,0.6);
+    font-size: 0.6em;
+    padding: 0.5em;
+    border-radius: 5px;
+}
+.buttonAdil {
+    width: 25px;
+    height: 25px;
+
+}
+.InstaAdil{
+    width: 25px;
+    height: 25px;
+}
+span.accessible-hidden {
+    position: absolute;
+    left: -10000px;
+}
+#scroll_to_top { 
+  position: fixed; 
+  width: 25px; 
+  height: 25px; 
+  bottom: 50px; 
+  right: 30px; 
+} 
+#scroll_to_top img { 
+  width: 50px; 
+}
+.socialMedia{
+       display: inline-flex;
+    align-self: flex-end;
+    justify-content: justify;
+    align-content: center;
+    text-align: center;
+
+}
+.table, .table td, .table th{
+  border : 1px solid;
+  text-align: center;
+}
+.img_centrale{
+  text-align: center;
 }
 
 </style>
-            
